// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutSharedHeader renders correctly 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR bZZBuO"
    >
      <div
        class="sc-fqkvVR ddPTFm"
      >
        <div
          class="sc-fqkvVR sc-jXbUNg bHaeEi gdCncd"
        >
          <div
            class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-8e0456a6-0 fgBWrW djyvKT iAkSYx cJiBvQ"
          >
            <div
              class="sc-fqkvVR sc-kAyceB fgBWrW kKfJVM"
            >
              <h1
                class="sc-kpDqfm cRJejs"
              >
                <span
                  class="sc-dAlyuH bOvjMx"
                >
                  TESTING_TITLE
                </span>
              </h1>
              <p
                class="sc-dLMFU hxKUrX"
              >
                TESTING_CONTENT
              </p>
            </div>
          </div>
          <div
            class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-8e0456a6-1 fgBWrW joHkzz dGlNMa hxrpsr"
          >
            <div
              class="sc-fqkvVR jqqmXN"
            >
              <img
                alt="Oak logo"
                class="sc-dcJsrY jRtmJB"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src="http://example.com/image.svg"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AboutSharedHeader renders correctly with loop illustration 1`] = `
<body>
  <div>
    <div
      class="sc-fqkvVR bZZBuO"
    >
      <div
        class="sc-fqkvVR ddPTFm"
      >
        <div
          class="sc-fqkvVR sc-jXbUNg bHaeEi gdCncd"
        >
          <div
            class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-8e0456a6-0 fgBWrW djyvKT iAkSYx cJiBvQ"
          >
            <div
              class="sc-fqkvVR sc-kAyceB fgBWrW kKfJVM"
            >
              <h1
                class="sc-kpDqfm cRJejs"
              >
                <span
                  class="sc-dAlyuH bOvjMx"
                >
                  TESTING_TITLE
                </span>
              </h1>
              <p
                class="sc-dLMFU hxKUrX"
              >
                TESTING_CONTENT
              </p>
            </div>
          </div>
          <div
            class="sc-fqkvVR sc-kAyceB sc-dhKdcB sc-8e0456a6-1 fgBWrW joHkzz dGlNMa hxrpsr"
          >
            <div
              class="sc-fqkvVR erqloa sc-8e0456a6-2 gVUkBJ"
              data-testid="about-shared-loop"
            >
              <img
                alt=""
                class="sc-dcJsrY cDKKvZ"
                data-nimg="fill"
                decoding="async"
                loading="lazy"
                src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1740665310/OWA/ui-graphics/looping-line-5_vdknco.svg"
                style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
